@startuml game

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram includes
!include game.cell.puml
!include game.player.puml
!include init.puml
!include io.puml
!include turn.puml
!include turn.listener.puml

' class diagram (https://plantuml.com/class-diagram)
$package(engine.game) {
    class Game {
        + Game(gameIOFactory: GameIOFactory, playerFactory: PlayerFactory)
        + start(): void
        - init(initFactory: InitFactory): void
        - turnLoop(turnManager: TurnManager): void
        + stop(): void
        + getMaze(): Maze
    }
    Game ..> "1" engine.io.GameIOFactory : - gameIOFactory: GameIOFactory {readOnly}
    Game ..> "1" PlayerFactory : - playerFactory: PlayerFactory {readOnly}
    Game ..> "1" engine.io.GameInputReader : - reader: GameInputReader
    Game ..> "1" engine.io.ActionSender : - sender: ActionSender
    Game ..> "1" engine.io.GameLogger : - logger: GameLogger
    Game --> "1" engine.game.cell.Maze : - maze: Maze
    Game --> "1" engine.game.player.Player : - player: Player

    class GameInitFactory {
        # GameInitFactory(mazeSupplier: Supplier<Maze>, playerFactory: PlayerFactory)
        + createMaze(mazeInfo: MazeInfo): Maze
        + createPlayer(playerInfo: PlayerInfo): Player
    }
    engine.init.InitFactory <|.. GameInitFactory
    GameInitFactory ..> "1" engine.game.cell.Maze : - mazeSupplier: Supplier<Maze> {readOnly}
    GameInitFactory ..> "1" engine.game.player.PlayerFactory : - playerFactory: PlayerFactory {readOnly}

    class GameTurnManager {
        # GameTurnManager(player: Player, logger: GameLogger)
        - addListeners(player: Player): void
        + onTurnFailure(action: Action, result: ActionResult): void
    }
    engine.turn.TurnManager <|-- GameTurnManager
    engine.turn.listener.TurnListener <|.. GameTurnManager
    GameTurnManager ..> "1" engine.io.GameLogger : - logger: GameLogger {readOnly}
}

@enduml
